--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>0.1</version>
     <packaging>jar</packaging>
 
+    <name>FlamboyantPluginTools</name>
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
